--- a/src/ProtonDrive.App.Windows/Views/Main/Photos/PhotosImportView.xaml
+++ b/src/ProtonDrive.App.Windows/Views/Main/Photos/PhotosImportView.xaml
@@ -3,263 +3,20 @@
     x:ClassModifier="internal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="clr-namespace:ProtonDrive.App.Windows.Controls"
     xmlns:converters="clr-namespace:ProtonDrive.App.Windows.Toolkit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:import="clr-namespace:ProtonDrive.App.Photos.Import;assembly=ProtonDrive.App"
     xmlns:loc="clr-namespace:ProtonDrive.App.Windows.Resources"
     xmlns:local="clr-namespace:ProtonDrive.App.Windows.Views.Main.Photos"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:shared="clr-namespace:ProtonDrive.App.Windows.Views.Shared"
     Padding="24"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance local:PhotosImportViewModel}">
     <UserControl.Resources>
-        <DataTemplate
-            x:Key="PhotoFolderTemplate"
-            DataType="{x:Type local:ImportFolderViewModel}">
-            <Border
-                Style="{StaticResource RoundedSection.DarkTheme}"
-                Margin="0,10,0,0">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="3*" />
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-
-                    <Image
-                        Grid.Column="0"
-                        Source="{StaticResource Icon.BlueFolder}"
-                        Height="16"
-                        VerticalAlignment="Center" />
-
-                    <TextBlock
-                        Grid.Column="1"
-                        TextTrimming="CharacterEllipsis"
-                        Margin="10,0,0,0">
-                        <Run
-                            Text="{Binding Name, Mode=OneWay}"
-                            ToolTip="{Binding Path}" />
-                        <LineBreak />
-                        <Run
-                            Text="{Binding NumberOfFilesToImport, Mode=OneWay, FallbackValue=0, TargetNullValue=0}"
-                            Foreground="{StaticResource GrayBrush}" />
-                        <Run
-                            Text="{loc:Resource Main_Photos_Folders_Items_Label}"
-                            Foreground="{StaticResource GrayBrush}" />
-                    </TextBlock>
-
-                    <shared:MappingStatusView
-                        Grid.Column="2"
-                        Visibility="{Binding ImportIsCompleted, Converter={x:Static converters:BooleanToVisibilityConverter.TrueIsCollapsed}}"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Margin="15,0,0,0" />
-
-                    <Grid
-                        Grid.Column="2"
-                        Visibility="{Binding ImportStatus, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static import:PhotoImportFolderStatus.Failed}}"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Margin="10,0,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-
-                        <Image
-                            Source="{StaticResource Icon.Error}"
-                            ToolTip="{loc:Resource Main_Photos_Folders_Error_ImportFailed}"
-                            Width="16"
-                            Height="16"
-                            VerticalAlignment="Center" />
-
-                        <TextBlock
-                            Grid.Column="1"
-                            Text="{loc:Resource Main_Photos_Folders_Error_ImportFailed}"
-                            FontSize="{StaticResource TextBlock.Small.FontSize}"
-                            Foreground="{StaticResource ErrorBrush}"
-                            TextTrimming="CharacterEllipsis"
-                            Margin="10,0,0,0" />
-                    </Grid>
-
-                    <Grid
-                        Grid.Column="2"
-                        Visibility="{Binding ImportStatus, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static import:PhotoImportFolderStatus.ValidationFailed}}"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Margin="10,0,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-
-                        <Image
-                            Grid.Column="0"
-                            Source="{StaticResource Icon.Warning}"
-                            Width="16"
-                            Height="16"
-                            VerticalAlignment="Center" />
-
-                        <TextBlock
-                            Grid.Column="1"
-                            Text="{Binding ValidationResult, Converter={x:Static converters:EnumToDisplayTextConverter.Instance}}"
-                            FontSize="{StaticResource TextBlock.Small.FontSize}"
-                            Foreground="{StaticResource PendingBrush}"
-                            TextTrimming="CharacterEllipsis"
-                            Margin="10,0,0,0" />
-                    </Grid>
-
-                    <controls:ProgressRing
-                        Grid.Column="3"
-                        Visibility="{Binding ImportStatus, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static import:PhotoImportFolderStatus.Importing}}"
-                        Width="16"
-                        Height="16"
-                        VerticalAlignment="Center"
-                        Margin="10,0,0,0" />
-
-                    <Grid
-                        Grid.Column="4"
-                        Visibility="{Binding ImportStatus, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static import:PhotoImportFolderStatus.Importing}}"
-                        Margin="10,0,0,0">
-                        <TextBlock
-                            TextTrimming="CharacterEllipsis"
-                            VerticalAlignment="Center">
-                            <TextBlock.Text>
-                                <MultiBinding StringFormat="{loc:Resource Main_Photos_Folders_ImportingItemsFormat}">
-                                    <Binding Path="NumberOfImportedFiles" />
-                                    <Binding Path="NumberOfFilesToImport" />
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </Grid>
-
-                    <Grid
-                        Grid.Column="4"
-                        Visibility="{Binding ImportStatus, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static import:PhotoImportFolderStatus.Succeeded}}"
-                        Margin="10,0,0,0">
-
-                        <TextBlock
-                            TextTrimming="CharacterEllipsis"
-                            ToolTip="{Binding Path=ImportStatus, Converter={x:Static converters:EnumToDisplayTextConverter.Instance}}"
-                            Visibility="{Binding NoPhotosFound, Converter={x:Static converters:BooleanToVisibilityConverter.TrueIsCollapsed}}"
-                            VerticalAlignment="Center">
-                            <TextBlock.Text>
-                                <MultiBinding StringFormat="{loc:Resource Main_Photos_Folders_ImportedItemsFormat}">
-                                    <Binding Path="NumberOfImportedFiles" />
-                                    <Binding Path="NumberOfFilesToImport" />
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-
-                        <TextBlock
-                            Text="{loc:Resource Main_Photos_Folders_NoItemsFound_Label}"
-                            FontSize="{StaticResource TextBlock.Small.FontSize}"
-                            Foreground="{StaticResource GrayBrush}"
-                            TextTrimming="CharacterEllipsis"
-                            Visibility="{Binding NoPhotosFound, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsCollapsed}}"
-                            VerticalAlignment="Center" />
-                    </Grid>
-
-                    <Grid
-                        Grid.Column="4"
-                        Visibility="{Binding ImportStatus, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static import:PhotoImportFolderStatus.Interrupted}}"
-                        Margin="10,0,0,0">
-                        <Grid>
-                            <TextBlock
-                                TextTrimming="CharacterEllipsis"
-                                ToolTip="{Binding Path=ImportStatus, Converter={x:Static converters:EnumToDisplayTextConverter.Instance}}"
-                                VerticalAlignment="Center">
-                                <TextBlock.Text>
-                                    <MultiBinding StringFormat="{loc:Resource Main_Photos_Folders_ImportedItemsFormat}">
-                                        <Binding Path="NumberOfImportedFiles" />
-                                        <Binding Path="NumberOfFilesToImport" />
-                                    </MultiBinding>
-                                </TextBlock.Text>
-                            </TextBlock>
-                        </Grid>
-                    </Grid>
-
-                    <Grid
-                        Grid.Column="4"
-                        Visibility="{Binding ImportStatus, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static import:PhotoImportFolderStatus.Failed}}"
-                        Margin="10,0,0,0">
-                        <Grid>
-                            <TextBlock
-                                TextTrimming="CharacterEllipsis"
-                                ToolTip="{Binding Path=ImportStatus, Converter={x:Static converters:EnumToDisplayTextConverter.Instance}}"
-                                VerticalAlignment="Center">
-                                <TextBlock.Text>
-                                    <MultiBinding StringFormat="{loc:Resource Main_Photos_Folders_ImportedItemsFormat}">
-                                        <Binding Path="NumberOfImportedFiles" />
-                                        <Binding Path="NumberOfFilesToImport" />
-                                    </MultiBinding>
-                                </TextBlock.Text>
-                            </TextBlock>
-                        </Grid>
-                    </Grid>
-
-                    <Grid
-                        Grid.Column="4"
-                        Visibility="{Binding ImportStatus, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static import:PhotoImportFolderStatus.SetupFailed}}"
-                        Margin="10,0,0,0">
-                        <Grid>
-                            <TextBlock
-                                TextTrimming="CharacterEllipsis"
-                                ToolTip="{Binding Path=ImportStatus, Converter={x:Static converters:EnumToDisplayTextConverter.Instance}}"
-                                VerticalAlignment="Center">
-                                <TextBlock.Text>
-                                    <MultiBinding StringFormat="{loc:Resource Main_Photos_Folders_ImportedItemsFormat}">
-                                        <Binding Path="NumberOfImportedFiles" />
-                                        <Binding Path="NumberOfFilesToImport" />
-                                    </MultiBinding>
-                                </TextBlock.Text>
-                            </TextBlock>
-                        </Grid>
-                    </Grid>
-
-                    <Menu
-                        Grid.Column="5"
-                        Background="Transparent"
-                        KeyboardNavigation.DirectionalNavigation="Continue"
-                        VerticalAlignment="Center"
-                        Margin="20,0,0,0"
-                        Focusable="True">
-                        <Menu.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <Grid />
-                            </ItemsPanelTemplate>
-                        </Menu.ItemsPanel>
-
-                        <MenuItem Style="{StaticResource EllipseIconlessMenuItemStyle}">
-                            <MenuItem.Header>
-                                <TextBlock
-                                    Text="{StaticResource icon-more}"
-                                    Foreground="{StaticResource Text.DarkTheme.Brush}"
-                                    Style="{StaticResource FontIconStyle}"
-                                    VerticalAlignment="Center" />
-                            </MenuItem.Header>
-
-                            <MenuItem
-                                AutomationProperties.AutomationId="OpenFolderMenuItem"
-                                CommandParameter="{Binding .}"
-                                Command="{Binding ElementName=ImportedFoldersItemsControl, Path=DataContext.OpenFolderCommand}"
-                                Header="{loc:Resource Main_Photos_Folders_Menu_Item_OpenFolder}" />
-
-                            <MenuItem
-                                AutomationProperties.AutomationId="RemoveMenuItem"
-                                CommandParameter="{Binding .}"
-                                Command="{Binding ElementName=ImportedFoldersItemsControl, Path=DataContext.RemoveFolderCommand}"
-                                Header="{loc:Resource Main_Photos_Folders_Menu_Item_Remove}" />
-                        </MenuItem>
-                    </Menu>
-                </Grid>
-            </Border>
-        </DataTemplate>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="PhotosImportFolderTemplate.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </UserControl.Resources>
 
     <Grid>
@@ -284,7 +41,7 @@
 
                 <Button
                     Grid.Column="1"
-                    Command="{Binding OpenImportGooglePhotosSupportUrlCommand}"
+                    Command="{Binding OpenHowPhotoImportWorksUrlCommand}"
                     Style="{StaticResource GrayHyperlinkButtonStyle}"
                     VerticalAlignment="Center">
                     <Grid>
@@ -297,7 +54,7 @@
 
                         <Image
                             Grid.Column="1"
-                            Source="{StaticResource Icon.InfoCircle}"
+                            Source="{StaticResource Icon.InfoCircle.Gray}"
                             Width="16"
                             Height="16"
                             VerticalAlignment="Center"
@@ -309,7 +66,7 @@
             <Border
                 Grid.Row="1"
                 Style="{StaticResource RoundedSection.DarkTheme.Warning}"
-                Visibility="{Binding UploadingIsNotAvailable, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsCollapsed}}"
+                Visibility="{Binding UploadingIsNotAvailable, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsCollapsed}, FallbackValue={x:Static Visibility.Collapsed}}"
                 Margin="0,20,0,0">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -464,7 +221,7 @@
             <ScrollViewer
                 Grid.Row="3"
                 VerticalScrollBarVisibility="Auto"
-                Margin="0,20,0,0">
+                Margin="0,10,0,0">
                 <ScrollViewer.Style>
                     <Style TargetType="ScrollViewer">
                         <Style.Triggers>
@@ -535,7 +292,7 @@
 
             <Button
                 Grid.Row="2"
-                Command="{Binding OpenImportGooglePhotosSupportUrlCommand}"
+                Command="{Binding OpenHowToImportPhotosFromGoogleUrlCommand}"
                 Style="{StaticResource SectionButtonStyle}"
                 VerticalContentAlignment="Center"
                 Margin="0,15,0,0">
