--- a/src/ProtonDrive.App.Windows/Views/Main/Photos/PhotosImportFolderTemplate.xaml
+++ b/src/ProtonDrive.App.Windows/Views/Main/Photos/PhotosImportFolderTemplate.xaml
@@ -3,7 +3,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:ProtonDrive.App.Windows.Controls"
     xmlns:converters="clr-namespace:ProtonDrive.App.Windows.Toolkit.Converters"
-    xmlns:fileSystem="clr-namespace:ProtonDrive.Sync.Shared.FileSystem;assembly=ProtonDrive.Sync.Shared"
     xmlns:import="clr-namespace:ProtonDrive.App.Photos.Import;assembly=ProtonDrive.App"
     xmlns:loc="clr-namespace:ProtonDrive.App.Windows.Resources"
     xmlns:local="clr-namespace:ProtonDrive.App.Windows.Views.Main.Photos"
@@ -19,7 +18,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="3*" />
+                    <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
