--- a/src/ProtonDrive.App.Windows/Views/SignIn/SecondFactorInputView.xaml
+++ b/src/ProtonDrive.App.Windows/Views/SignIn/SecondFactorInputView.xaml
@@ -2,6 +2,7 @@
     x:Class="ProtonDrive.App.Windows.Views.SignIn.SecondFactorInputView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:ProtonDrive.App.Windows.Toolkit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:loc="clr-namespace:ProtonDrive.App.Windows.Resources"
     xmlns:local="clr-namespace:ProtonDrive.App.Windows.Views.SignIn"
@@ -14,46 +15,167 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <TextBlock
             Grid.Row="0"
             Text="{loc:Resource SignIn_Title_2FA}"
-            FontSize="20"
+            FontSize="24"
             HorizontalAlignment="Center"
-            Margin="0,20,0,0" />
-
-        <TextBlock
-            Grid.Row="2"
-            Text="{loc:Resource SignIn_Text_2FACode}"
-            FontSize="{StaticResource TextBlock.Default.FontSize}"
-            Foreground="{StaticResource GrayBrush}"
-            TextWrapping="Wrap"
-            HorizontalAlignment="Center"
-            Margin="0,10,0,0" />
-
-        <TextBox
-            Name="CodeTextBox"
-            AutomationProperties.AutomationId="TwoFactorCodeTextBox"
-            Grid.Row="3"
-            Text="{Binding Code, UpdateSourceTrigger=PropertyChanged}"
-            Margin="0,20,0,0" />
-
-        <Button
-            AutomationProperties.AutomationId="ContinueButton"
-            Grid.Row="4"
-            Content="{loc:Resource SignIn_Button_Authenticate}"
-            Command="{Binding ContinueSigningInCommand}"
-            IsDefault="True"
-            Style="{StaticResource PrimaryButtonStyle}"
-            Height="32"
             Margin="0,30,0,0" />
+
+        <ListBox
+            Grid.Row="1"
+            ItemsSource="{Binding EnabledPages}"
+            SelectedItem="{Binding CurrentPage}"
+            SelectionMode="Single"
+            Visibility="{Binding HasMultipleEnabledPages, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsCollapsed}}"
+            HorizontalAlignment="Center"
+            Margin="0,10,0,0">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Converter={x:Static converters:EnumToDisplayTextConverter.Instance}}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+        <Grid
+            Grid.Row="2"
+            Visibility="{Binding CurrentPage, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static local:SecondFactorInputPage.NotSupported}}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <Image
+                Grid.Row="0"
+                Source="/Views/SignIn/Banner.No2FA.DarkTheme.png"
+                Height="140"
+                Margin="0,40,0,0" />
+
+            <TextBlock
+                Grid.Row="1"
+                Text="{loc:Resource SignIn_Text_No2FAMethodFound}"
+                FontSize="{StaticResource TextBlock.Default.FontSize}"
+                Foreground="{StaticResource GrayBrush}"
+                TextWrapping="Wrap"
+                HorizontalAlignment="Center"
+                Margin="0,30,0,0" />
+        </Grid>
+
+        <Grid
+            Grid.Row="2"
+            Visibility="{Binding CurrentPage, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static local:SecondFactorInputPage.Totp}}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <TextBlock
+                Grid.Row="0"
+                Text="{loc:Resource SignIn_Text_2FACode}"
+                FontSize="{StaticResource TextBlock.Default.FontSize}"
+                Foreground="{StaticResource GrayBrush}"
+                TextWrapping="Wrap"
+                HorizontalAlignment="Center"
+                Margin="0,30,0,0" />
+
+            <TextBox
+                Name="CodeTextBox"
+                AutomationProperties.AutomationId="TwoFactorCodeTextBox"
+                Grid.Row="1"
+                Text="{Binding Code, UpdateSourceTrigger=PropertyChanged}"
+                MaxLength="6"
+                Margin="0,20,0,0" />
+
+            <Button
+                AutomationProperties.AutomationId="ContinueButton"
+                Grid.Row="2"
+                Content="{loc:Resource SignIn_Button_Authenticate}"
+                Command="{Binding ContinueSigningInCommand}"
+                IsDefault="True"
+                Style="{StaticResource PrimaryButtonStyle}"
+                Height="32"
+                Margin="0,30,0,0" />
+        </Grid>
+
+        <Grid
+            Grid.Row="2"
+            Visibility="{Binding CurrentPage, Converter={x:Static converters:ObjectEqualityToVisibilityConverter.NotEqualIsCollapsed}, ConverterParameter={x:Static local:SecondFactorInputPage.Fido2}}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <Image
+                Grid.Row="0"
+                Source="/Views/SignIn/SecurityKey.DarkTheme.png"
+                Visibility="{Binding IsFido2Available, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsCollapsed}}"
+                Height="140"
+                Margin="0,0,0,0" />
+
+            <Image
+                Grid.Row="0"
+                Source="/Views/SignIn/SecurityKey.NotSupported.DarkTheme.png"
+                Visibility="{Binding IsFido2Available, Converter={x:Static converters:BooleanToVisibilityConverter.TrueIsCollapsed}}"
+                Height="140"
+                Margin="0,0,0,0" />
+
+            <TextBlock
+                Grid.Row="1"
+                Text="{loc:Resource SignIn_Text_SecurityKeyNotSupported}"
+                FontSize="{StaticResource TextBlock.Default.FontSize}"
+                Foreground="{StaticResource GrayBrush}"
+                TextWrapping="Wrap"
+                Visibility="{Binding IsFido2Available, Converter={x:Static converters:BooleanToVisibilityConverter.TrueIsCollapsed}}"
+                HorizontalAlignment="Center"
+                Margin="0,10,0,0" />
+
+            <WrapPanel
+                Grid.Row="1"
+                Orientation="Horizontal"
+                Visibility="{Binding IsFido2Available, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsCollapsed}}"
+                Margin="0,10,0,0">
+                <TextBlock
+                    Text="{loc:Resource SignIn_Text_SecurityKey}"
+                    FontSize="{StaticResource TextBlock.Default.FontSize}"
+                    Foreground="{StaticResource GrayBrush}"
+                    TextWrapping="Wrap"
+                    HorizontalAlignment="Center"
+                    Margin="0,10,0,0" />
+
+                <Button
+                    AutomationProperties.AutomationId="LearnMoreButton"
+                    Content="{loc:Resource SignIn_Button_LearnMore}"
+                    Command="{Binding LearnMoreCommand}"
+                    Style="{StaticResource HyperlinkButtonStyle}"
+                    HorizontalAlignment="Left" />
+            </WrapPanel>
+
+            <Button
+                AutomationProperties.AutomationId="AuthenticateWithFido2Button"
+                Grid.Row="2"
+                Content="{loc:Resource SignIn_Button_Authenticate}"
+                Command="{Binding ContinueSigningInCommand}"
+                IsDefault="True"
+                IsEnabled="{Binding IsFido2Available}"
+                Style="{StaticResource PrimaryButtonStyle}"
+                Height="32"
+                Margin="0,30,0,0" />
+        </Grid>
 
         <Button
             AutomationProperties.AutomationId="SignInAsAnotherUserButton"
-            Grid.Row="5"
+            Grid.Row="3"
             Content="{loc:Resource SignIn_Button_Back}"
             Command="{Binding RestartSignInCommand}"
             Style="{StaticResource HyperlinkButtonStyle}"
