--- a/src/ProtonDrive.App.Windows/Views/SignIn/SessionWorkflowView.xaml
+++ b/src/ProtonDrive.App.Windows/Views/SignIn/SessionWorkflowView.xaml
@@ -40,69 +40,92 @@
     </UserControl.Resources>
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+        <Grid>
+            <Image
+                Source="/Views/SignIn/Banner.DarkTheme.2FA.png"
+                Visibility="{Binding IsSecondFactorView, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsCollapsed}}"
+                Height="208"
+                VerticalAlignment="Top" />
+        </Grid>
 
-        <Image
-            Grid.Row="0"
-            Source="/Views/SignIn/Banner.DarkTheme.png"
-            Height="208" />
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-        <Image
-            Grid.Row="1"
-            Source="{StaticResource ProtonDriveLogoImageSource}"
-            Width="175" />
+            <Image
+                Grid.Row="0"
+                Source="/Views/SignIn/Banner.DarkTheme.png"
+                Visibility="{Binding IsSecondFactorView, Converter={x:Static converters:BooleanToVisibilityConverter.TrueIsCollapsed}}"
+                Height="208" />
 
-        <StackPanel
-            Grid.Row="2"
-            Visibility="{Binding IsConnecting, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsCollapsed}}"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Top"
-            Margin="0,30,0,0">
-            <TextBlock
-                Text="{loc:Resource SignIn_Message_SigningIn}"
-                FontSize="20"
-                HorizontalAlignment="Center" />
+            <Image
+                Grid.Row="1"
+                Source="{StaticResource ProtonDriveLogoImageSource}"
+                Width="175">
+                <Image.Style>
+                    <Style TargetType="Image">
+                        <Style.Triggers>
+                            <DataTrigger
+                                Binding="{Binding IsSecondFactorView}"
+                                Value="true">
+                                <Setter Property="Margin" Value="0,40,0,0" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Image.Style>
+            </Image>
 
-            <Border
-                Background="{StaticResource Separator.DarkTheme.Border}"
-                Width="400"
-                Height="1"
+            <StackPanel
+                Grid.Row="2"
+                Visibility="{Binding IsConnecting, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsCollapsed}}"
                 HorizontalAlignment="Center"
-                Margin="0,20,0,0" />
+                VerticalAlignment="Top"
+                Margin="0,30,0,0">
+                <TextBlock
+                    Text="{loc:Resource SignIn_Message_SigningIn}"
+                    FontSize="20"
+                    HorizontalAlignment="Center" />
 
-            <controls:ProgressRing
-                HorizontalAlignment="Center"
-                Margin="0,36,0,0" />
-        </StackPanel>
+                <Border
+                    Background="{StaticResource Separator.DarkTheme.Border}"
+                    Width="400"
+                    Height="1"
+                    HorizontalAlignment="Center"
+                    Margin="0,20,0,0" />
 
-        <ContentControl
-            Grid.Row="2"
-            Width="340"
-            HorizontalAlignment="Center">
-            <ContentControl.Style>
-                <Style
-                    TargetType="ContentControl"
-                    BasedOn="{StaticResource {x:Type ContentControl}}">
-                    <Style.Triggers>
-                        <DataTrigger
-                            Binding="{Binding IsConnecting}"
-                            Value="False">
-                            <Setter Property="Content" Value="{Binding CurrentStepViewModel, ValidatesOnNotifyDataErrors=False}" />
-                        </DataTrigger>
+                <controls:ProgressRing
+                    HorizontalAlignment="Center"
+                    Margin="0,36,0,0" />
+            </StackPanel>
 
-                        <DataTrigger
-                            Binding="{Binding IsConnecting}"
-                            Value="True">
-                            <Setter Property="IsEnabled" Value="False" />
-                            <Setter Property="Visibility" Value="Collapsed" />
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </ContentControl.Style>
-        </ContentControl>
+            <ContentControl
+                Grid.Row="2"
+                Width="340"
+                HorizontalAlignment="Center">
+                <ContentControl.Style>
+                    <Style
+                        TargetType="ContentControl"
+                        BasedOn="{StaticResource {x:Type ContentControl}}">
+                        <Style.Triggers>
+                            <DataTrigger
+                                Binding="{Binding IsConnecting}"
+                                Value="False">
+                                <Setter Property="Content" Value="{Binding CurrentStepViewModel, ValidatesOnNotifyDataErrors=False}" />
+                            </DataTrigger>
+
+                            <DataTrigger
+                                Binding="{Binding IsConnecting}"
+                                Value="True">
+                                <Setter Property="IsEnabled" Value="False" />
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </ContentControl.Style>
+            </ContentControl>
+        </Grid>
     </Grid>
 </UserControl>
