--- a/src/ProtonDrive.App.Windows/Resources/Styles/ColorPalette.xaml
+++ b/src/ProtonDrive.App.Windows/Resources/Styles/ColorPalette.xaml
@@ -6,14 +6,15 @@
     <Color x:Key="PrimaryColor">#6D4AFF</Color>
     <Color x:Key="PrimaryColor.Dark">#7C5CFF</Color>
     <Color x:Key="PrimaryColor.ExtraDark">#8A6EFF</Color>
-    <Color x:Key="RedColor.Light">#F64B6A</Color>
+    <Color x:Key="RedColor.ExtraLight">#FAE0E5</Color>
+    <Color x:Key="RedColor.Light">#FF99A4</Color>
     <Color x:Key="RedColor">#F5385A</Color>
     <Color x:Key="RedColor.Dark">#DC3251</Color>
     <Color x:Key="RedColor.ExtraDark">#C42C48</Color>
+    <Color x:Key="RedColor.ExtraExtraDark">#442726</Color>
     <Color x:Key="YellowColor">#FAD857</Color>
-    <Color x:Key="LightYellowColor">#E1C24E</Color>
-    <Color x:Key="LightRedColor">#FAE0E5</Color>
-    <Color x:Key="LightOrangeColor">#FFF0D9</Color>
+    <Color x:Key="YellowColor.Light">#E1C24E</Color>
+    <Color x:Key="OrangeColor.Light">#FFF0D9</Color>
     <Color x:Key="GreenColor">#1EA885</Color>
     <Color x:Key="WhiteColor">#FFFFFF</Color>
 
