--- a/src/ProtonDrive.App.Windows/Views/SignIn/SecondFactorInputView.xaml
+++ b/src/ProtonDrive.App.Windows/Views/SignIn/SecondFactorInputView.xaml
@@ -2,6 +2,8 @@
     x:Class="ProtonDrive.App.Windows.Views.SignIn.SecondFactorInputView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:behaviors="clr-namespace:ProtonDrive.App.Windows.Toolkit.Behaviors"
     xmlns:converters="clr-namespace:ProtonDrive.App.Windows.Toolkit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:loc="clr-namespace:ProtonDrive.App.Windows.Resources"
@@ -9,7 +11,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance local:SecondFactorInputViewModel}">
-    <Grid FocusManager.FocusedElement="{Binding ElementName=CodeTextBox}">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -77,10 +79,45 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <TextBlock
+            <Border
                 Grid.Row="0"
+                Background="{StaticResource ErrorPanel.Background.SignIn}"
+                BorderThickness="0"
+                Style="{StaticResource RoundedSection.DarkTheme.Error}"
+                Visibility="{Binding Path=(Validation.HasError), ElementName=CodeBox, Converter={x:Static converters:BooleanToVisibilityConverter.FalseIsHidden}}"
+                Margin="0,10,0,0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock
+                        Grid.Column="0"
+                        Text="{StaticResource icon-error-full}"
+                        FontSize="18"
+                        Foreground="{StaticResource ErrorPanel.Foreground.SignIn}"
+                        Style="{StaticResource FontIconStyle}"
+                        VerticalAlignment="Center" />
+
+                    <TextBlock
+                        Grid.Column="1"
+                        Text="{Binding Path=(Validation.Errors)[0].ErrorContent, ElementName=CodeBox}"
+                        TextTrimming="CharacterEllipsis"
+                        VerticalAlignment="Center"
+                        Margin="15,0,0,0">
+                        <b:Interaction.Behaviors>
+                            <behaviors:TextBlockAutoToolTipBehavior />
+                        </b:Interaction.Behaviors>
+                    </TextBlock>
+                </Grid>
+            </Border>
+
+            <TextBlock
+                Grid.Row="1"
                 Text="{loc:Resource SignIn_Text_2FACode}"
                 FontSize="{StaticResource TextBlock.Default.FontSize}"
                 Foreground="{StaticResource GrayBrush}"
@@ -88,17 +125,29 @@
                 HorizontalAlignment="Center"
                 Margin="0,30,0,0" />
 
-            <TextBox
-                Name="CodeTextBox"
-                AutomationProperties.AutomationId="TwoFactorCodeTextBox"
-                Grid.Row="1"
-                Text="{Binding Code, UpdateSourceTrigger=PropertyChanged}"
-                MaxLength="6"
-                Margin="0,20,0,0" />
+            <local:TwoFactorAuthenticationCodeBox
+                x:Name="CodeBox"
+                Grid.Row="2"
+                Code="{Binding TotpCode, UpdateSourceTrigger=PropertyChanged}"
+                Margin="0,20,0,0">
+                <Validation.ErrorTemplate>
+                    <ControlTemplate />
+                </Validation.ErrorTemplate>
+
+                <b:Interaction.Behaviors>
+                    <behaviors:TotpDigitsBehavior />
+                </b:Interaction.Behaviors>
+
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="CodeCompleted">
+                        <b:InvokeCommandAction Command="{Binding ContinueSigningInCommand}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </local:TwoFactorAuthenticationCodeBox>
 
             <Button
                 AutomationProperties.AutomationId="ContinueButton"
-                Grid.Row="2"
+                Grid.Row="3"
                 Content="{loc:Resource SignIn_Button_Authenticate}"
                 Command="{Binding ContinueSigningInCommand}"
                 IsDefault="True"
